# norg-pandoc-rs

./: .gitignore  Cargo.toml  README.md  README.norg  flake.nix
.github/: dependabot.yml
.github/workflows/: doc.yml
lib/: Cargo.toml  README.md  README.norg
lib/src/: document.rs  lib.rs
lib/src/block/: detached.rs  heading.rs  list.rs  mod.rs  paragraph.rs  quote.rs
lib/src/block/tags/: infirm.rs  mod.rs  verbatim.rs
lib/src/inline/: attached.rs  detached_extension.rs  link.rs  mod.rs
src/: document.rs  main.rs
src/block/: heading.rs  list.rs  mod.rs  paragraph.rs
src/block/tags/: mod.rs  verbatim.rs
src/inline/: link.rs  mod.rs
