[package]
name = "norg_pandoc_rs"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["lib"]

[dependencies]
clap = { version = "4.4.2", features = ["derive", "cargo"] }
rusty_pool = "0.7.0"
pandoc_ast = "0.8.4"
walkdir = "2.3.3"
norg_pandoc_ast = { path = "lib" }

[features]
debug = ["norg_pandoc_ast/debug"]

[patch.crates-io]
pandoc_ast =  { git = "https://github.com/VoreckLukas/pandoc-ast.git" }
