[package]
name = "norg_pandoc_rs"
version = "0.2.0"
edition = "2021"

[workspace]
members = ["lib"]

[dependencies]
clap = { version = "4.4.11", features = ["derive", "cargo"] }
rusty_pool = "0.7.0"
pandoc_ast = "0.8.5"
walkdir = "2.4.0"
norg_pandoc_ast = { path = "lib" }

[features]
debug = ["norg_pandoc_ast/debug"]
